# ai-academy-machine-learning-2023

./: EMGMM_Kmeans_demo.ipynb  EMGMM_demo.ipynb  Makefile  README.md  Temporal_GSP.ipynb  W10S2_RecSys_SVDTuning_Sol.ipynb  W1S2_Apriori.ipynb  W6S1_CNN_CIFAR10.ipynb  fms_data_generator.ipynb  hmm_rl.ipynb  pyproject.toml  requirements.txt
.github/: dependabot.yml
apriori_python/: W1S2_Apriori.ipynb  W1S2_Apriori.py  apriori.py
week-1/apriori_python/: W1S2_Apriori.ipynb
week-1/apriori_python/.ipynb_checkpoints/: w1s2-Apriori-checkpoint.ipynb
week-1/dataset/.ipynb_checkpoints/: dermatology-checkpoint.csv
week-10/2_W10S1_Code_RecSys/2_W10S1_Code_RecSys/: W10S1_RecSys_Sol.ipynb
week-4/: EMGMM_demo.ipynb  nau_EMGMM_demo.ipynb
week-4/3_W4S1_Code_EMGMM/: EMGMM_dataset.npy  EMGMM_demo.ipynb  EMGMM_demo.py
week-4/3_W4S2_Code_Clustering/3_W4S2_Code_Clustering/: EMGMM_Kmeans_dataset.npy  EMGMM_Kmeans_demo.ipynb  EMGMM_Kmeans_demo.py
week-5/3_W5S1_Code_SemiSupervised/3_W5S1_Code_SemiSupervised/: README.md  SemiSupervised_demo.ipynb  SemiSupervised_demo.py  australian_credit.csv  pyproject.toml
week-5/3_W5S2_AutoEncoder/3_W5S2_AutoEncoder/: README.md  SSL_AutoEncoder.ipynb  SSL_AutoEncoder.py
week-6/1_2_W6S1_Code_CNN/1_2_W6S1_Code_CNN/: W6S1_CNN_CIFAR10.ipynb  W6S1_CNN_CIFAR10.py  W6S1_CNN_fashionMNIST.ipynb  W6S1_CNN_fashionMNIST.py
week-6/1_2_W6S2_Code_GAN_DCGAN_new/1_2_W6S2_Code_GAN_DCGAN/: README.md  (+3 more)
week-9/: W9 S1 MDP Q Learning.ipynb
week-9/2_W9S2_Code_DRL/: pyproject.toml
week-9/2_W9S2_Code_DRL/2_W9S2_Code_DRL/: config.py  pyproject.toml
(+52 files in other folders)
