[tool.poetry]
name = "3-w1s2-apriori-code"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
readme = "README.md"
packages = [{include = "3_w1s2_apriori_code"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
