[tool.poetry]
name = "2-w9s2-code-drl"
version = "0.1.0"
description = ""
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "2_w9s2_code_drl"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
